2014-01-03  Joseph Myers  <joseph@codesourcery.com>

	[BZ #16390]
	* sysdeps/powerpc/nofpu/Makefile [$(subdir) = math]
	(CFLAGS-e_atan2l.c): Use -fno-builtin-fabsl.

2014-01-03  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* sysdeps/powerpc/powerpc64/multiarch/strcasecmp-power7.S: Remove
	extra tokens at end of #undef directive.
	* sysdeps/powerpc/powerpc64/multiarch/strcasecmp_l-power7.S: Likewise.
	* sysdeps/powerpc/powerpc64/multiarch/strnlen-power7.S: Likewise.
	* sysdeps/powerpc/powerpc64/multiarch/wcscpy.c: Likewise.

2014-01-03  Andrew Hunter  <ahh@google.com>

	* elf/dl-open.c (dl_open_worker): New comment.
	* elf/dl-reloc.c (_dl_try_allocate_static_tls): Use
	atomic_compare_and_exchange_bool_acq
	(_dl_allocate_static_tls): Block signals.
	* elf/dl-tls.c (allocate_and_init): Return void.
	(_dl_update_slotinfo): Block signals, use atomic update.

2014-01-03  Joseph Myers  <joseph@codesourcery.com>

	* sysdeps/powerpc/nofpu/libm-test-ulps: Regenerated.

	* math/auto-libm-test-in: Mark various tests with
	xfail-rounding:ldbl-128ibm.
	* math/auto-libm-test-out: Regenerated.

2014-01-02  Joseph Myers  <joseph@codesourcery.com>

	[BZ #16386]
	* sysdeps/ieee754/ldbl-128ibm/e_logl.c (__ieee754_logl): Adjust
	numbers with subnormal high part when calculating exponent.

	[BZ #16385]
	* sysdeps/ieee754/ldbl-128ibm/s_asinhl.c (__asinhl): Use fabsl not
	fabs.

	[BZ #16384]
	* sysdeps/ieee754/ldbl-128ibm/e_acoshl.c (ln2): Initialize with
	M_LN2l.
	(__ieee754_acoshl): Use __log1pl not __log1p.

2013-01-02  Ondřej Bílka  <neleai@seznam.cz>

	* malloc/arena.c (malloc_atfork, free_atfork, ptmalloc_lock_all,
	ptmalloc_unlock_all, ptmalloc_unlock_all2, next_env_entry,
	__failing_morecore, ptmalloc_init, dump_heap, new_heap, grow_heap,
	heap_trim, _int_new_arena, get_free_list, reused_arena, arena_get2):
	Convert to GNU style.
	* malloc/hooks.c (memalign_hook_ini, __malloc_check_init,
	mem2mem_check, mem2chunk_check, top_check, realloc_check,