@@ -108,7 +108,7 @@ fi
 # Until we start requiring 2.6.37+ headers, we need to check for the
 # availability of linux/fanotify.h for testing purposes.
 AC_CHECK_HEADER(linux/fanotify.h,
-  [DEFINES="$DEFINES -DHAVE_LINUX_FANOTIFY_H=1"], ,
+  [AC_DEFINE(HAVE_LINUX_FANOTIFY_H)], ,
   [/* No default includes.  */])
 
 # The result of the above test for the use of the FDE code is invalid if
